troubleshooting a state update issue on mobile

--- a/src/components/ButtonValue/ButtonValue.styles.css
+++ b/src/components/ButtonValue/ButtonValue.styles.css
@@ -8,18 +8,17 @@
   align-content: center;
 }
 
-.button-value-input {
+.button-value {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background-color: white;
   border: none;
   width: 2.6rem;
   height: 1.5rem;
   font-family: var(--button-font);
-  margin: 0 0.3rem;
-}
-
-.button-value-input::placeholder {
-  color: black;
-  text-align: center;
+  line-height: 1.7rem;
+  margin: 0 0.5rem;
 }
 
 .button-value-label {
